--- a/package.json
+++ b/package.json
@@ -40,5 +40,6 @@
     "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "^3.0.9"
-  }
+  },
+  "packageManager": "pnpm@10.12.2+sha512.a32540185b964ee30bb4e979e405adc6af59226b438ee4cc19f9e8773667a66d302f5bfee60a39d3cac69e35e4b96e708a71dd002b7e9359c4112a1722ac323f"
 }
